--- a/frontend/src/pages/faq-form.css
+++ b/frontend/src/pages/faq-form.css
@@ -13,17 +13,12 @@ input[type="checkbox"] {
 
 input[type="checkbox"]:checked {
   background-color: #6b46c1;
-  /* Purple color */
   border-color: #6b46c1;
 }
 
 input[type="checkbox"]:checked::after {
-  content: '';
+  content: "";
   position: absolute;
-  /* top: 3px;
-    left: 3px;
-    width: 8px;
-    height: 8px; */
   background-color: white;
   border-radius: 2px;
 }
@@ -31,9 +26,7 @@ input[type="checkbox"]:checked::after {
 input[type="checkbox"]:focus {
   outline: none;
   box-shadow: 0 0 0 2px rgba(107, 70, 193, 0.5);
-  /* Focus ring for purple */
 }
-
 
 /* Custom radio button styles */
 input[type="radio"] {
@@ -50,16 +43,12 @@ input[type="radio"] {
 
 input[type="radio"]:checked {
   background-color: #6b46c1;
-  /* Purple color */
   border-color: #6b46c1;
 }
 
 input[type="radio"]:checked::after {
-  content: '';
+  content: "";
   position: absolute;
-  /* top: 4px;
-    left: 4px; */
-  /* width: 8px; */
   height: 8px;
   background-color: white;
   border-radius: 50%;
@@ -68,5 +57,5 @@ input[type="radio"]:checked::after {
 input[type="radio"]:focus {
   outline: none;
   box-shadow: 0 0 0 2px rgba(107, 70, 193, 0.5);
-  /* Focus ring for purple */
 }
+
